--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,5 @@ services:
       - "5000:5000"
     environment:
       - MONGO_URI=mongodb+srv://EuroHoopAdmin:stby9ZGGGqahFyZz@igorcluster.loyvk.mongodb.net/EuroHoopDb
+    command: gunicorn --worker-class eventlet -w 4 -b 0.0.0.0:5000 run:app
+    restart: always
