--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - "5000:5000"
     environment:
       - MONGO_URI=mongodb+srv://EuroHoopAdmin:stby9ZGGGqahFyZz@igorcluster.loyvk.mongodb.net/EuroHoopDb
-      - REDIS_URL=redis://redis:6379/0
+      - REDIS_URL=redis-17861.c245.us-east-1-3.ec2.redns.redis-cloud.com:17861
     depends_on:
       - redis
     restart: always
